--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,12 @@ gemfile:
   - Gemfile.rails42
   - Gemfile.rails50
   - Gemfile.rails51
+  - Gemfile.rails52
 matrix:
   allow_failures:
     - gemfile: Gemfile.rails50
       rvm: 2.1
     - gemfile: Gemfile.rails51
+      rvm: 2.1
+    - gemfile: Gemfile.rails52
       rvm: 2.1
